# computer_science2

./: .gitignore  README.md  app.puml  app_launcher.py  build.bat  dynamic.md  external_hash.md  hash_endpoints.md  index.css  index.html  index.js  main.py  notas.txt  pyproject.toml  requirements.txt  ruff.toml  services.puml  tree_endpoints.md
app/controllers/: __init__.py
app/controllers/search/: base_search.py  binary_search.py  linear_search.py
app/controllers/search/hash/: helpers.py  router.py  schemas.py
app/controllers/search/tree/: common.py  digital.py  huffman_tree.py  multiple.py  simple.py  tree.py  tree_controller.py
app/services/search/: base_search.py  binary_search.py  linear_search.py
app/services/search/hash/: abstract_hash.py  collision_chained.py  collision_simple.py  hash_function.py  hash_table.py  hash_test.py
docs/: build (windows).md  build.md
static/: arbol.html  binaria.html  binaria_externa.html  hash.html  hash_dinamica.html  hash_externa.html  hashing.html  huffman.html  index.css  index.html  index.js  lineal_externa.html  secuencial.html
static/css/: animations.css  binaria.css  binaria_externa.css  components.css  global-reset.css  hash.css  hash_dinamica.css  hash_externa.css  hashing.css  huffman.css  index.css  layout.css  lineal_externa.css  notificaciones.css  secuencial.css  visualization.css
static/js/: api-config.js  arbol.js  binaria.js  binaria_externa.js  hash.js  hash_dinamica.js  hash_externa.js  hashing.js  huffman.js  index.js  lineal_externa.js  notificaciones.js  secuencial.js
(+7 files in other folders)
