[project]
name = "computer-science2"
version = "0.1.0"
description = "Computer Science Simulators"
readme = "README.md"
requires-python = ">=3.11.9"
dependencies = [
    "fastapi>=0.128.2",
    "matplotlib>=3.10.8",
    "networkx>=3.6.1",
    "pyinstaller>=6.18.0",
    "pywebview>=6.1",
    "requests>=2.32.5",
    "uvicorn>=0.40.0",
]
